--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" href="clock.png" />
+    <link rel="icon" href="assets/clock.png" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
@@ -173,3 +173,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
